--- a/web/polished/style.css
+++ b/web/polished/style.css
@@ -371,7 +371,6 @@ table#revisions {
 }
 
 #revisions .filelist { /* "Show modified files" */
-	display: inline;
 	color: #ffdd80;
 }
 
@@ -391,20 +390,29 @@ table#revisions {
 	display: none;
 }
 
+#revisions td {
+	padding: 0.5ex;
+	text-align: center;
+}
+
 #revisions tbody td:first-child {
 	/* rev number - git/mercurial revs numbers look bad with prop. fonts */
 	font-family: monospace;
 	text-align: right;
 }
 
-#revisions tbody td:nth-child(2), #revisions tbody td:nth-child(3) {
-	/* Compare and Date column */
-	text-align: center;
+#revisions td > p {
+	/* log message in comment column */
+	margin: 0;
+	white-space: pre;
+	text-align: left;
 }
 
-#revisions tbody td:nth-child(4) { /* author column */
-	padding: 0 1ex;
-	text-align: center;
+#revisions td > div {
+	/* modified file list in comment column */
+	font-family: monospace;
+	text-align: left;
+	float: left;
 }
 
 #revisions tbody td.revtags { /* tags row */
